Add gui + various improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,4 +78,6 @@ if(GUI)
     target_sources(sd PRIVATE src/viewer.cc)
     target_link_libraries(sd imgui tinyfiledialogs stb)
     target_compile_definitions(sd PRIVATE GUI)
+    target_compile_definitions(StarDecomposition PRIVATE GUI)
+    target_link_libraries(StarDecomposition imgui tinyfiledialogs stb)
 endif()
