--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,8 @@ if(GUI)
     target_sources(sd PRIVATE src/viewer.cc)
     target_link_libraries(sd imgui tinyfiledialogs stb)
     target_compile_definitions(sd PRIVATE GUI)
-    target_compile_definitions(StarDecomposition PRIVATE GUI)
+
+    target_sources(StarDecomposition PRIVATE src/viewer.cc)
     target_link_libraries(StarDecomposition imgui tinyfiledialogs stb)
+    target_compile_definitions(StarDecomposition PRIVATE GUI)
 endif()
