Fix SAVE_DEBUG_MESHES ignored

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,9 +78,9 @@ target_link_libraries(sd StarDecomposition)
 if(GUI)
     target_sources(sd PRIVATE src/viewer.cc)
     target_link_libraries(sd imgui tinyfiledialogs stb)
-    target_compile_definitions(sd PRIVATE GUI)
+    target_compile_definitions(sd PRIVATE GUI SAVE_DEBUG_MESHES)
 
     target_sources(StarDecomposition PRIVATE src/viewer.cc)
     target_link_libraries(StarDecomposition imgui tinyfiledialogs stb)
-    target_compile_definitions(StarDecomposition PRIVATE GUI)
+    target_compile_definitions(StarDecomposition PRIVATE GUI SAVE_DEBUG_MESHES)
 endif()
